implement inventory & reservation before testing
